# otium

./: CMakeLists.txt  README.md
lib/: README
otium/: component_factory.h  engine.h  manifest.h  script.h  script_engine.h
otium/data/: json_serializer.h
otium/project/: project_builder.h  project_compiler.h
otium/scene/: object.h  scene.h
otium/scene/component/: component.h  script_component.h
src/: CMakeLists.txt  engine.cpp  project_builder.cpp  python_script.cpp  python_script_engine.cpp
src/bindings/python/: python_script.cpp  python_script_engine.cpp
src/tools/: otium-builder.cpp
